// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Version: 1.1
// Name: Adding cart and product

Table user_credential as UC {
  id uuid [pk]
  username varchar [unique, not null]
  hashed_password varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table user_info as UI {
  id uuid [pk]
  user_id uuid [ref: - UC.id, not null]
  phone_number varchar [unique, not null]
  first_name varchar [not null]
  last_name varchar [not null]
  middle_name varchar [not null]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    id
    user_id
  }
}

Table user_address as UA {
  id uuid [pk]
  owner uuid [ref: > UI.id, not null]
  address_name varchar [not null]
  address varchar [not null]
  city varchar [not null]
  state varchar [not null]
  zipcode int [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    id
    owner
    (owner, address_name) [unique]
  }
}

Table user_cart as UCT {
  id uuid [pk]
  owner uuid [ref: - UI.id, not null]
}

Table cart_item as CI {
  id uuid [pk]
  cart_id uuid [ref: > UCT.id, not null]
  product_id uuid [ref: > P.id, not null]
  quantity int [not null, note: "Cannot be less than 1"]
}

//----------//
Table product as P {
  id uuid [pk]
  name varchar [not null]
  description text [not null]
  SKU varchar [not null]
  price decimal [not null, note: "Cannot be negative"]
  category_id uuid [ref: > PC.id, not null]
  inventory_id uuid [ref: - PI.id, not null]
  discount_id uuid [ref: > PD.id]
}

Table product_inventory as PI {
  id uuid [pk]
  quantity int [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Table product_category as PC {
  id uuid [pk]
  name varchar [not null, unique]
  description text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Table product_discount as PD {
  id uuid [pk]
  name varchar [not null]
  description text [not null]
  discount_percent decimal [not null]
  active bool [not null, default: False]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

//----------//
Table order_detail as OD {
  id uuid [pk]
  user_id uuid [ref: > UI.id, not null]
  total float8 [not null]
  payment_id uuid [ref: - PM.id, not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Table order_item as OI {
  id uuid [pk]
  order_id uuid [ref: > OD.id, not null]
  product_id uuid [ref: > P.id, not null]
  quantity int [not null]
  status order_status
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Enum order_status {
  "Preparing"
  "Shipped"
  "Deliveried"
  "Pending Cancel"
  "Canceled"
}

//--------//
Table payment_detail as PM {
  id uuid [pk]
  amount float8 [not null]
  type payment_type [not null]
  status payment_status [not null]
  card_number varchar [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
}

Enum payment_status {
  "Pending"
  "Successed"
  "Rejected"
}

Enum payment_type {
  "VISA"
  "MASTER CARD"
  "AMERICAN EXPRESS"
}